adding swagger api documentation for auth and user routes
